--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Formative Pi 01</title>
+    <title>Formative Bit 01</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Setting Up a Raspberry Pi</h1>
+        <h1 class="text-center">Setting Up a micro:bit</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="FormativePI01" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="FormativeBIT01" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -140,8 +140,8 @@
                 </li>
 
                 <li>Download the latest ZIP file of the Raspbian Operating System with desktop<br />
-                    <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
-                        <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br />
+                    <a href="../FormativePi01/RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
+                        <img src="../FormativePi01/RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br />
                 </li>
 
 
@@ -173,14 +173,10 @@
                 <li>Open Etcher and make sure you see that it recognizes that you have a microSD card mounted.<br />
                     If Ether does not appear, you will need to restart your laptop.</li>
                 <li>Select the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image.<br />
-                    <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
-                        <img src="FlashMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
+                    <a href="../FormativePi01/FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
+                        <img src="../FormativePi01/FlashMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
                 </li>
                 <li>Then select Flash. The process will take several minutes.</li>
-                <li>Once the microSD is flashed, open File Explorer on your laptop, navigate to the root of the microSD card  (probably E:), right-click and choose &#39;New&gt;Text Document&#39;</li>
-                <li>Use your name as the name of the text document, such as PatPaulson.txt<br />
-                    This will identify you as the owner of the microSD card in case it is turned into Lost 
-                    &amp; Found.</li>
             </ol>
             <hr />
         </div>
@@ -197,8 +193,8 @@
                     Plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
 
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
-                    <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                        <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                    <a href="../FormativePi01/InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
+                        <img src="../FormativePi01/InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
 
                 </li>
 
@@ -224,13 +220,12 @@
                 <li>CONNECT TO WSU GUEST ONLY!!! If prompted make an account and log in.</li>
                 <li>When asked to update, click next. The update will begin, this make take a few minutes. If asked to restart, do so.</li>
                 <li>In the upper right corner of the desktop hover over the Wi-Fi signal to determine the IP address. </li>
-                <li>Store this IP address on your laptop in the ReadMe.txt file that contains your password.<br />
+                <li>Store this IP address in the ReadMe.txt file that contains your password.<br />
                     The IP address will look something like 10.20.xx.xx<br />
                     Note that the IP address will change about every 30 days.
                 </li>
                 <li>In the upper left corner, you will see the raspberry icon. click the raspberry icon, then preferences, and Raspberry Pi Configuration.</li>
                 <li>Click the interfaces tab and Enable SSH and VNC.</li>
-                <li></li>
             </ol>
             <hr />
         </div>
@@ -254,25 +249,14 @@
                     This brings up information on how to use scrot.<br />
                     Review this information.<br />
                     Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
-                    <a href="scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
-                        <img src="scrot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>scrot help<br />
+                    <a href="../FormativePi01/scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
+                        <img src="../FormativePi01/scrot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>scrot help<br />
                     <br />
                 </li>
 
                 <li>
-                    <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                    <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots<br />
-                </li>
-                <li>Select Pi&gt;Accessories&gt;Text Editor, and create a file that contains only your name in 72 point font.</li>
-                <li>In the terminal window type in 
-                    <code>scrot -s</code>
-                    then click and drag the mouse to select an area around your name in the text file.
-                </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot to YourName.png</li>
-                <li>Right click the Pi desktop, select &#39;Desktop Preferences&#39;, under the &#39;Desktop&#39; tab set the Layout to &#39;Centre image on screen&#39;, and on Picture choose the YourName.png file.<br />
-                    Then click OK.<br />
-                    <a href="YourName.png" class="img-responsive img-rounded" target="popup" onclick="window.open('YourName.PNG', 'popup'); return false;">
-                    <img src="YourName.png" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Desktop Settings<br />
+                    <a href="../FormativePi01/ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
+                        <img src="../FormativePi01/ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots<br />
                 </li>
             </ol>
             <hr />
@@ -294,14 +278,14 @@
             <ul>
                 <li>Chromium web browser, open to D2L: <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">https://winona.learn.minnstate.edu/</a>, show this course, with your name in top right,</li>
                 <li>Rasberry Pi configuration, &#39;Interfaces&#39; tab, showing VNC and SSH enabled,</li>
-                <li>Make sure your name is visible on the desktop,</li>
+                <li>Network Preferences, interface tab, set to wlan0, showing settings,</li>
                 <li>Terminal window, after running <code>cat /etc/os-release</code> and <code>scrot</code> ,</li>
             </ul>
             <br />
             <p>
                 Your screen shot name is of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
-                <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>
+                <a href="../FormativePi01/ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
+                    <img src="../FormativePi01/ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>
                 Suggested Screen Shot Format
             </p>
 
