--- a/IOT04/IOT04.html
+++ b/IOT04/IOT04.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>IOT02</title>
+    <title>IOT04</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Apache2 Webserver on a Raspberry Pi</h1>
+        <h1 class="text-center">Zenmap on a Raspberry Pi</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="IOT02" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOT04" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -87,21 +87,20 @@
 
 
             <p>
-                These instructions will show you how to download and install Apache2 onto a Raspberry Pi.<br />
-                This software allows you to run a website on a Raspberry Pi.<br />
+                These instructions will show you how to download and install Zenmap onto a Raspberry Pi.<br />
+                This software is a GUI for nmap, a network security scanner.<br />
                 <br />
 
-                More information on <a href="https://httpd.apache.org/" class="bg-info text-white" target="_blank">Apache</a> is available online.<br />
+                More information on <a href="https://nmap.org/zenmap/" class="bg-info text-white" target="_blank">Zenmap</a> is available online.<br />
 
-                Being able to use this software will greatly simplify working with the Raspberry Pi to learn how websites work.
+                Being able to use this software will enable you to understand network operations and security issues.
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
-                <li>Obtain Apache2</li>
-                <li>Install Apache2 on a Raspberry Pi</li>
-                <li>Run Apache2</li>
-                <li>Find and edit a website file served by Apache2</li>
-                <li>View your (or other&#39;s) website on your Raspberry Pi and laptop</li>
+                <li>Obtain Zenmap</li>
+                <li>Install Zenmap on a Raspberry Pi</li>
+                <li>Run Zenmap</li>
+                <li>Conduct basic network security scans on the WSU guest network</li>
             </ol>
             <hr />
         </div>
@@ -124,36 +123,23 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install Apache2</a><a href="#Exercise01"></a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install Zenmap</a><a href="#Exercise01"></a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
-
-            <p>ref: <a href="https://pimylifeup.com/raspberry-pi-apache/" class="bg-info text-white" target="_blank">PiMyLifeUp Article</a>  </p>
             <ol>
                 <li>These steps are performed on the Raspberry Pi.</li>
-
-                <li>Open a Terminal window and enter the following commands to ensure your Raspberry Pi is up to date<br />
-                    <code>sudo apt-get update</code><br />
-                    <code>sudo apt-get full-upgrade</code>
+                <li>Open a terminal window and enter:<br />
+                    <code>sudo apt install zenmap</code>
                 </li>
-
-                <li>In the Terminal window enter the following command to install the Apache2 webserver:<br />
-                    <code>sudo apt install apache2 -y</code>
-                </li>
-
-                <li>Open a browser and ensure the Apache2 webserver is running by browsing to both these urls:<br />
-                    <code>127.0.0.1</code><br />
-                    <code>current IP address</code> which can be found by entering <code>hostname -I</code> into the Terminal window
-                </li>
-
-                <li>After Apache2 begins, the following webpage will load, which you must read.<br />
+                <li>After installation, locate and right-click Zenmap in the RPi menu under &#39;Internet&#39;, then select &#39;Properites&#39;</li>
+                <li>Select the Desktop Entry tab, and add sudo to the front of the Command: statement
                     <p>
-                        <a href="apache2.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('apache2.PNG', 'popup'); return false;">
-                            <img src="apache2.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Apache Webserver<br />
+                        <a href="ZenmapProperties.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ZenmapProperties.PNG', 'popup'); return false;">
+                            <img src="ZenmapProperties.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Start Zenmap as SU<br />
                     </p>
                 </li>
-
-                <li>If the webpage does not appear, troubleshoot and resolve any issues.<br />
+                <li>Click OK </li>
+                <li>From the menu select Internet&gt;Zenmap to start it<br />
                 </li>
 
             </ol>
@@ -164,45 +150,29 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Examine Apache2</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Run Zenmap</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
+
+            <p>ref: <a href="https://nmap.org/book/zenmap.html" class="bg-info text-white" target="_blank">Zenmap User&#39;s Guide</a></p>
 
             <ol>
                 <li>These steps are performed on your Raspberry Pi.</li>
 
-                <li>Open a Terminal window and start the Apache2 webserver (if it is not already running) by entering:<br />
-                    <code>apache2</code><br />
-                </li>
+                <li>Find the IP address of your Raspberry Pi</li>
 
-                <li>The material on the default page describes details of the webserver installation.<br />
-                    Note that the local website root folder is at <code>/var/www/html/</code>
-                </li>
-                <li>Create a new &#39;home page&#39; for your website by using VNC Viewer to transfer the file &#39;homepage.html&#39; from the ReadOnly folder of the T: drive for this course to the desktop <code>/home/pi/Desktop/</code> <br />
-                </li>
 
-                <li>In the terminal window do the following to modify the homepage.html file: <br />
-                    <code>cd Desktop</code> then press Enter<br />
-                    <code>sudo nano homepage.html</code>then press Enter, and you are in superuser(su) edit mode<br />
-                </li>
-
-                <li>Press the space key, then the backspace key, and &#39;Modified&#39; will appear in the top right corner.<br />
-
+                <li>Assuming an IP address of 10.20.85.xxx, enter the following into the Zenmap &#39;Target:&#39;<br />
+                    <code>10.20.85.0/24</code><br />
+                    This will allow you to scan the subnet.
                     <p>
-                        <a href="sudoEdit.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('sudoEdit.PNG', 'popup'); return false;">
-                            <img src="sudoEdit.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Modify homepage.html<br />
+                        <a href="ZenmapScan.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ZenmapScan.PNG', 'popup'); return false;">
+                            <img src="ZenmapScan.PNG" width="400" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Scan Settings<br />
                     </p>
                 </li>
 
-                <li>Press the &#39;Ctrl+X&#39; keys, then press &#39;y&#39; and then press &#39;Enter&#39; <br />
-                    In the &#39;File Name to Write&#39; row, enter <br />
-                    <code>/var/www/html/homepage.html</code><br />
-                    and then press enter.<br />
-                    When asked to save file under a different name, press 
-                    &#39;y&#39;<p>
-                        <a href="SaveFile.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('SaveFile.PNG', 'popup'); return false;">
-                            <img src="SaveFile.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Save homepage to Website Root Folder<br />
-                    </p>
+                <li>From the &#39;Profile:&#39; list choose and run various scans by pressing the Scan button.<br />
+                    Review the results.
                 </li>
 
             </ol>
@@ -219,23 +189,23 @@
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
-            <p>Point the browser to  <code>127.0.0.1/homepage.html</code><br />
-                The homepage file will appear, similar to below.<br />               
+            <p>Run a Quick scan of your WSU Guest subnet and take a screenshot of the results to document your work.<br />
+                Note: this can be done using the Snipping Tool if you are running VNC, or use the <code>scrot</code> command if you are connected to the Raspberry Pi with a keyboard and mouse.
             </p>
-
-                    <p>
-                        <a href="NewHomePage.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NewHomePage.PNG', 'popup'); return false;">
-                            <img src="NewHomePage.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>New Home Page<br />
-                    </p>
 
             <ol>
                 <li>On the Raspberry Pi, position the browser window next to your name on the desktop.</li>
 
-                <li> Take a screenshot with Apache2 running and displaying &#39;homepage.html&#39; to document your work.<br />
-                Note: this can be done using the Snipping Tool if you are running VNC, or use the <code>scrot</code> command if you are connected to the Raspberry Pi with a keyboard and mouse.
+                <li>Take a screenshot.
+                    <p>
+                        <a href="SampleScan.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('SampleScan.PNG', 'popup'); return false;">
+                            <img src="SampleScan.PNG" width="400" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Sample Scan <br />
+                    </p>
+
+
                 </li>
 
-                <li>On your laptop you may want to save the screenshot  as &quot;IOT02&quot; in your ' 
+                <li>If on your laptop you may want to save the screenshot  as &quot;IOT04&quot; in your ' 
              <code><span id="abPath"></span></code>
                     <script>document.getElementById("abPath").innerHTML = Path; </script>
                     ' folder.<br />
@@ -246,7 +216,7 @@
 
 
         <div class="col-lg-12 text-danger">
-            <h2>ScreenShot IOT02</h2>
+            <h2>ScreenShot IOT04</h2>
             <hr />
         </div>
 
@@ -263,7 +233,7 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. Upload your screenshot to the &#39;IOT02&#39; D2L Assignment Folder.
+                (90) 1. Upload your screenshot to the &#39;IOT04&#39; D2L Assignment Folder.
             </p>
             <hr />
         </div>
