--- a/IOT04/IOT04.html
+++ b/IOT04/IOT04.html
@@ -260,7 +260,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT02.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT04.">
             <hr />
         </div>
 
@@ -275,7 +275,7 @@
 
         <div class="col-lg-12">
             <p>
-                Congratulations! You have successfully installed and used WaveMon, a WiFi monitoring program on a Raspberry Pi single board computer.                
+                Congratulations! You have successfully installed and used Zenmap, a network security scanner, on a Raspberry Pi single board computer.                
             </p>
             <hr />
         </div>
