--- a/IOT06/IOT06.html
+++ b/IOT06/IOT06.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>IOT02</title>
+    <title>IOT06</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Apache2 Webserver on a Raspberry Pi</h1>
+        <h1 class="text-center">Rpi Monitor</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="IOT02" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOT06" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -87,21 +87,20 @@
 
 
             <p>
-                These instructions will show you how to download and install Apache2 onto a Raspberry Pi.<br />
-                This software allows you to run a website on a Raspberry Pi.<br />
+                These instructions will show you how to download and install RPi-Monitor onto a Raspberry Pi.<br />
+                This software allows you to monitor different devices and peripherals on a Raspberry Pi.<br />
                 <br />
 
-                More information on <a href="https://httpd.apache.org/" class="bg-info text-white" target="_blank">Apache</a> is available online.<br />
+                More information on <a href="https://xavierberger.github.io/RPi-Monitor-docs/index.html" class="bg-info text-white" target="_blank">RPi-Monitor</a> is available online.<br />
 
-                Being able to use this software will greatly simplify working with the Raspberry Pi to learn how websites work.
+                This software will allow you to monitor devices on your Raspberry Pi such as peripherals and connected sensors.
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
-                <li>Obtain Apache2</li>
-                <li>Install Apache2 on a Raspberry Pi</li>
-                <li>Run Apache2</li>
-                <li>Find and edit a website file served by Apache2</li>
-                <li>View your (or other&#39;s) website on your Raspberry Pi and laptop</li>
+                <li>Obtain RPi-Monitor</li>
+                <li>Install RPi-Monitor on a Raspberry Pi</li>
+                <li>Run RPi-Monitor</li>
+                <li>Monitor a device using RPi-Monitor</li>
             </ol>
             <hr />
         </div>
@@ -124,11 +123,11 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install Apache2</a><a href="#Exercise01"></a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install RPi-Monitor</a><a href="#Exercise01"></a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
 
-            <p>ref: <a href="https://pimylifeup.com/raspberry-pi-apache/" class="bg-info text-white" target="_blank">PiMyLifeUp Article</a>  </p>
+            <p>ref: <a href="https://xavierberger.github.io/RPi-Monitor-docs/11_installation.html#installation-from-repository" class="bg-info text-white" target="_blank">RPi-Monitor Installation</a>  </p>
             <ol>
                 <li>These steps are performed on the Raspberry Pi.</li>
 
@@ -137,19 +136,30 @@
                     <code>sudo apt-get full-upgrade</code>
                 </li>
 
-                <li>In the Terminal window enter the following command to install the Apache2 webserver:<br />
-                    <code>sudo apt install apache2 -y</code>
+                <li>In the Terminal window enter the following command to trust the RPi-Monitor repository:<br />
+                    <code>sudo apt-get install dirmngr</code><br />
+                    <code>sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 2C0D3C0F</code>
                 </li>
 
-                <li>Open a browser and ensure the Apache2 webserver is running by browsing to both these urls:<br />
-                    <code>127.0.0.1</code><br />
-                    <code>current IP address</code> which can be found by entering <code>hostname -I</code> into the Terminal window
+                <li>In the Terminal window enter the following command to add RPi-Monitor to your repository list:<br />
+                    <code>sudo wget http://goo.gl/vewCLL -O /etc/apt/sources.list.d/rpimonitor.list</code>
                 </li>
 
-                <li>After Apache2 begins, the following webpage will load, which you must read.<br />
+                <li>In the Terminal window enter the following command to install RPi-Monitor:<br />
+                    <code>sudo apt-get install rpimonitor</code>
+                </li>
+
+                <li>After installation, in the Terminal window enter the following command to update packages information:<br />
+                    <code>sudo /etc/init.d/rpimonitor update</code>
+                </li>
+
+                <li>Open the browser and go to: <code>127.0.0.1:8888</code> (if it is not already running) <br />
+                </li>
+
+                <li>If the installation was correct you  will see a webpage similar to this:<br />
                     <p>
-                        <a href="apache2.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('apache2.PNG', 'popup'); return false;">
-                            <img src="apache2.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Apache Webserver<br />
+                        <a href="RpiMonitor.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RpiMonitor.PNG', 'popup'); return false;">
+                            <img src="RpiMonitor.PNG" width="300" alt="RPi Monitor" class="img-responsive img-responsive" /></a>RPi Monitor<br />
                     </p>
                 </li>
 
@@ -164,45 +174,21 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Examine Apache2</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Update RPi-Monitor</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
                 <li>These steps are performed on your Raspberry Pi.</li>
 
-                <li>Open a Terminal window and start the Apache2 webserver (if it is not already running) by entering:<br />
-                    <code>apache2</code><br />
+                <li>Open the browser and go to: <code>127.0.0.1:8888</code> (if it is not already loaded) <br />
                 </li>
 
-                <li>The material on the default page describes details of the webserver installation.<br />
-                    Note that the local website root folder is at <code>/var/www/html/</code>
-                </li>
-                <li>Create a new &#39;home page&#39; for your website by using VNC Viewer to transfer the file &#39;homepage.html&#39; from the ReadOnly folder of the T: drive for this course to the desktop <code>/home/pi/Desktop/</code> <br />
+                <li>Check the version section, you may need to execute the following command to update the RPiMonitor packages:<br />
+                    <code>sudo /etc/init.d/rpimonitor update</code>
                 </li>
 
-                <li>In the terminal window do the following to modify the homepage.html file: <br />
-                    <code>cd Desktop</code> then press Enter<br />
-                    <code>sudo nano homepage.html</code>then press Enter, and you are in superuser(su) edit mode<br />
-                </li>
-
-                <li>Press the space key, then the backspace key, and &#39;Modified&#39; will appear in the top right corner.<br />
-
-                    <p>
-                        <a href="sudoEdit.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('sudoEdit.PNG', 'popup'); return false;">
-                            <img src="sudoEdit.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Modify homepage.html<br />
-                    </p>
-                </li>
-
-                <li>Press the &#39;Ctrl+X&#39; keys, then press &#39;y&#39; and then press &#39;Enter&#39; <br />
-                    In the &#39;File Name to Write&#39; row, enter <br />
-                    <code>/var/www/html/homepage.html</code><br />
-                    and then press enter.<br />
-                    When asked to save file under a different name, press 
-                    &#39;y&#39;<p>
-                        <a href="SaveFile.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('SaveFile.PNG', 'popup'); return false;">
-                            <img src="SaveFile.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Save homepage to Website Root Folder<br />
-                    </p>
+                <li>Examine the information in the different sections of RPi-Monitor.
                 </li>
 
             </ol>
@@ -219,23 +205,19 @@
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
-            <p>Point the browser to  <code>127.0.0.1/homepage.html</code><br />
-                The homepage file will appear, similar to below.<br />               
+            <p>Point the browser to  <code>127.0.0.1:8888</code><br />
+                The RPi-Monitor homepage file will appear.<br />               
             </p>
 
-                    <p>
-                        <a href="NewHomePage.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NewHomePage.PNG', 'popup'); return false;">
-                            <img src="NewHomePage.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>New Home Page<br />
-                    </p>
 
             <ol>
                 <li>On the Raspberry Pi, position the browser window next to your name on the desktop.</li>
 
-                <li> Take a screenshot with Apache2 running and displaying &#39;homepage.html&#39; to document your work.<br />
+                <li> Take a screenshot with RPi-Monitor displaying the Version, Uptime and CPU sections to document your work.<br />
                 Note: this can be done using the Snipping Tool if you are running VNC, or use the <code>scrot</code> command if you are connected to the Raspberry Pi with a keyboard and mouse.
                 </li>
 
-                <li>On your laptop you may want to save the screenshot  as &quot;IOT02&quot; in your ' 
+                <li>On your laptop you may want to save the screenshot  as &quot;IOT06&quot; in your ' 
              <code><span id="abPath"></span></code>
                     <script>document.getElementById("abPath").innerHTML = Path; </script>
                     ' folder.<br />
@@ -246,7 +228,7 @@
 
 
         <div class="col-lg-12 text-danger">
-            <h2>ScreenShot IOT02</h2>
+            <h2>ScreenShot IOT06</h2>
             <hr />
         </div>
 
@@ -263,16 +245,10 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. Upload your screenshot to the &#39;IOT02&#39; D2L Assignment Folder.
+                (90) 1. Upload your screenshot to the &#39;IOT06&#39; D2L Assignment Folder.
             </p>
             <hr />
         </div>
-
-
-
-
-
-
 
 
 
@@ -290,11 +266,9 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT02.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOT06.">
             <hr />
         </div>
-
-
 
 
 
@@ -305,7 +279,7 @@
 
         <div class="col-lg-12">
             <p>
-                Congratulations! You have successfully installed and used Apache2, a web server, on a Raspberry Pi single board computer.                
+                Congratulations! You have successfully installed and used RPi-Monitor, a monitoring program on a Raspberry Pi single board computer.                
             </p>
             <hr />
         </div>
